add plugin configuration. break API compatibility by adding specific operationIds
