# generated/inline_response_200_2_data.go
@@ -1,0 +1,26 @@
+/* 
+ * Kong-Admin
+ *
+ * A Swagger definition for the Kong Admin API
+ *
+ * OpenAPI spec version: 1.1.0
+ * 
+ * Generated by: https://github.com/swagger-api/swagger-codegen.git
+ */
+
+package swagger
+
+type InlineResponse2002Data struct {
+
+	ConsumerId string `json:"consumer_id,omitempty"`
+
+	ClientId string `json:"client_id,omitempty"`
+
+	Id string `json:"id,omitempty"`
+
+	CreatedAt int32 `json:"created_at,omitempty"`
+
+	Name string `json:"name,omitempty"`
+
+	RedirectUri string `json:"redirect_uri,omitempty"`
+}
