# generated/inline_response_200_3.go
@@ -1,0 +1,32 @@
+/* 
+ * Kong-Admin
+ *
+ * A Swagger definition for the Kong Admin API
+ *
+ * OpenAPI spec version: 1.1.0
+ * 
+ * Generated by: https://github.com/swagger-api/swagger-codegen.git
+ */
+
+package swagger
+
+type InlineResponse2003 struct {
+
+	ExpiresIn int32 `json:"expires_in,omitempty"`
+
+	AuthenticatedUserid string `json:"authenticated_userid,omitempty"`
+
+	Id string `json:"id,omitempty"`
+
+	CredentialId string `json:"credential_id,omitempty"`
+
+	CreatedAt int32 `json:"created_at,omitempty"`
+
+	RefreshToken string `json:"refresh_token,omitempty"`
+
+	TokenType string `json:"token_type,omitempty"`
+
+	AccessToken string `json:"access_token,omitempty"`
+
+	Scope string `json:"scope,omitempty"`
+}
